--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -9,20 +9,34 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [3.8, 3.10]
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Fetch all history for proper coverage analysis
     
-    - name: Set up Python 3.10
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
-        python-version: '3.10'
+        python-version: ${{ matrix.python-version }}
+        
+    - name: Cache pip dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
         
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install pytest pytest-cov flake8
+        pip install pytest pytest-cov flake8 codecov
         pip install -e .
         
     - name: Lint with flake8
@@ -34,10 +48,23 @@ jobs:
         
     - name: Test with pytest
       run: |
-        pytest tests/ --cov=. --cov-report=xml
+        if [ -d "tests" ]; then
+          pytest tests/ --cov=. --cov-report=xml --cov-report=term --cov-branch
+        else
+          echo "No tests directory found, skipping tests"
+        fi
         
     - name: Upload coverage report
+      if: success() && matrix.python-version == '3.10'
       uses: codecov/codecov-action@v3
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
         fail_ci_if_error: false
+        verbose: true
+        
+    - name: Build package
+      if: success() && matrix.python-version == '3.10'
+      run: |
+        pip install build wheel
+        python -m build
