--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ flask>=2.0.0
 # Add any other dependencies your project needs
 pytest>=6.0.0
 pytest-cov>=2.12.0
-flake8>=3.9.0 
+flake8>=3.9.0
+codecov>=2.1.0 
